// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-DangerIcon"
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-DangerIcon lucid-DangerIcon-is-clickable"
  isClickable={true}
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;

exports[`DangerIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-DangerIcon lucid-DangerIcon-is-disabled"
  isDisabled={true}
>
  <circle
    className="lucid-DangerIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-DangerIcon-x"
    d="M5.5 5.5l5 5m0-5l-5 5"
    stroke="#fff"
  />
</Icon>
`;
